--- a/part0/0.6_diagramSinglePageApp.md
+++ b/part0/0.6_diagramSinglePageApp.md
@@ -5,5 +5,6 @@ sequenceDiagram
 
     browser ->> server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     activate server
+    server ->> browser: the page is loaded with a new notes and return in the browser page
 
-    Note right of browser: The browser executed the page wit
+    Note right of browser: The browser executed the page with a POST request that execute the page with only 1 file.
